--- a/deck.css
+++ b/deck.css
@@ -1,3 +1,9 @@
+#deck {
+	display: grid;
+	gap: 1rem;
+	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+}
+
 .card {
 	border: 1px solid #CCC;
 }
