--- a/deck.css
+++ b/deck.css
@@ -22,6 +22,7 @@
 	text-align: center;
 	vertical-align: middle;
 	user-select: none;
+	-webkit-user-select: none;
 	background-image: none;
 	border: 2px solid transparent;
 	border-radius: 4px;
