--- a/deck.css
+++ b/deck.css
@@ -114,3 +114,16 @@ ol li {
 * {
 	font-family: 'Ubuntu', sans-serif;
 }
+
+input[type=text]::before, input[type=text]::after, input[type=text] {
+	box-sizing: border-box;
+}
+
+input[type=text] {
+	font-size: 16px;
+	font-family: inherit;
+	padding: 4 0 0 0;
+	background-color: #ffffff;
+	border: 1px solid #c87e74;
+	border-radius: 4px;
+}
