--- a/deck.css
+++ b/deck.css
@@ -5,7 +5,7 @@
 }
 
 /* Display the deck or marketplace as a grid of cards */
-#deck, #deck-community {
+.deck, #deck-community {
 	display: grid;
 	gap: 0.5rem;
 	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
