--- a/deck.css
+++ b/deck.css
@@ -117,6 +117,7 @@ ol li {
 }
 
 /* Make the input mode container a flexbox */
+/*
 #input-mode {
 	padding: 0;
 	margin: auto;
@@ -125,13 +126,13 @@ ol li {
 	position: relative;
 	display: flex;
 	align-items: center;
-	width: 100%;
+	max-width: 35%;
 	justify-content: center;
 }
 
 #input-mode p {
 	margin-right: 6px;
-}
+}*/
 
 * {
 	font-family: 'Ubuntu', sans-serif;
