--- a/main.css
+++ b/main.css
@@ -236,5 +236,5 @@ header {
 
 /* This is the button you use to start a session */
 #start-button, #start-button-writer-section {
-	margin: 0 auto 0 auto;
+	margin: auto;
 }
