--- a/Components/header.tmpl.html
+++ b/Components/header.tmpl.html
@@ -1,9 +1,9 @@
 <header>
 	<ul id="main-page-header">
 		<li><a href="./index.html" id="main-page-header-home" class="site-title">Youyin </a></li>
-		<li><a href="./deck.html">Deck</a></li>
-		<li><a href="./marketplace.html">Marketplace</a></li>
-		<li><a href="./account.html">Account</a></li>
-		<li><a href="./about.html">About</a></li>
+		<li><a href="./deck.html">{{ _ no_cards_link_deck }}</a></li>
+		<li><a href="./marketplace.html">{{ _ marketplace-deck-button }}</a></li>
+		<li><a href="./account.html">{{ _ account }}</a></li>
+		<li><a href="./about.html">{{ _ about-us }}</a></li>
 	</ul>
 </header>
