--- a/Components/footer.tmpl.html
+++ b/Components/footer.tmpl.html
@@ -13,5 +13,5 @@
 		<option value="7">🇯🇵   JP</option>
 	</select>
 </footer>
-<script src="./i18n.js"></script>
-<script src="./index.js"></script>
+<script src="./{{ _ locale }}i18n.js"></script>
+<script src="./{{ _ locale }}index.js"></script>
