Added internationalisation and refactored some code

--- a/Components/header.tmpl.html
+++ b/Components/header.tmpl.html
@@ -1,7 +1,7 @@
 <header>
 	<ul id="main-page-header">
 		<li><a href="./{{ _ locale }}index.html" id="main-page-header-home" class="site-title">Youyin </a></li>
-		<li><a href="./{{ _ locale ]}deck.html">{{ _ no_cards_link_deck }}</a></li>
+		<li><a href="./{{ _ locale }}deck.html">{{ _ no_cards_link_deck }}</a></li>
 		<li><a href="./{{ _ locale }}marketplace.html">{{ _ marketplace-deck-button }}</a></li>
 		<li><a href="./{{ _ locale }}account.html">{{ _ account }}</a></li>
 		<li><a href="./{{ _ locale }}about.html">{{ _ about-us }}</a></li>
