Almost ready for 0.3.9.0

--- a/main.css
+++ b/main.css
@@ -24,6 +24,11 @@ main {
 	--main-padding-width: 1rem;
 }
 
+.article {
+	padding-left: 0.5rem;
+	padding-right: 0.5rem;
+}
+
 #start-button-writer-section {
 	padding-left: 0.5rem;
 	padding-right: 0.5rem;
