--- a/Components/footer.tmpl.html
+++ b/Components/footer.tmpl.html
@@ -2,15 +2,15 @@
 	<p>
 		{{ _ footer {{ raw <a href="https://madladsquad.com/">MadLad Squad</a>}} }}
 	</p>
-	<select aria-label="Language select box" name="lang" id="lang-select" class="centered" onchange="modifySelectedLanguage()">
-		<option value="0">🇬🇧   EN</option>
-		<option value="1">🇧🇬   BG</option>
-		<option value="2">🇨🇳   CN</option>
-		<option value="3">🇹🇼   CN-T</option>
-		<option value="4">🇩🇪   DE</option>
-		<option value="5">🇲🇰   MK</option>
-		<option value="6">🇷🇺   RU</option>
-		<option value="7">🇯🇵   JP</option>
+	<select aria-label="Language select box" name="lang" id="lang-select" class="centered">
+		<option value="en_US">🇬🇧   EN</option>
+		<option value="bg_BG">🇧🇬   BG</option>
+		<option value="zh_CN">🇨🇳   CN</option>
+		<option value="zh_TW">🇹🇼   CN-T</option>
+		<option value="de_DE">🇩🇪   DE</option>
+		<option value="mk_MK">🇲🇰   MK</option>
+		<option value="ru_RU">🇷🇺   RU</option>
+		<option value="jp_JP">🇯🇵   JP</option>
 	</select>
 </footer>
 <script src="./{{ _ locale }}i18n.js"></script>
