--- a/main.css
+++ b/main.css
@@ -132,7 +132,7 @@ select {
 	outline: none;
 	box-sizing: border-box;
 
-	padding: 1 1 1 1;
+	padding: 2px 2px 2px 2px;
 	margin: 0 0 0 0;
 	max-width: max-content;
 	resize: horizontal;
@@ -168,7 +168,6 @@ option {
 		float: left;
 		position: relative;
 		display: flex;
-		align-items: left;
 
 		width: 100%;
 		padding: 0;
